[package]
name = "pyrgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrgo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
serde = "1.0.163"
toml = "0.7.3"

[dev-dependencies]
rstest = "0.17.0"
