[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "new-project"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Author name", email = "author@email.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pyrgo < 3"]

[tool.ruff]
line-length = 88
ignore = [
    "ANN101",
    "D203",
    "D212",
    "COM812",
    "COM819",
    "D206",
    "E501",
    "ISC001",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
select = ["ALL"]
fix = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["INP001", "S101", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = ["integration: mark integration tests.", "unit: mark unittest."]

[tool.mypy]
follow_imports = "normal"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
explicit_package_bases = true
